style.css
@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
:root {
  --clr-yellow: hsl(47, 88%, 63%);

  --clr-white: hsl(0, 0%, 100%);

  --clr-gray-500: hsl(0, 0%, 42%);
  --clr-gray-950: hsl(0, 0%, 7%);
}

*,
*::before,
**:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
p {
  padding: 0;
  margin: 0;
}
h2 {
  margin: 0;
  padding: 0;
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}
body {
  background-color: var(--clr-yellow);
  display: flex;
  place-items: center;
  place-content: center;
  font-family: "Figtree", serif;
}
img {
  display: block;
  width: 100%;
}
.text-learning {
  width: 20%;
  background-color: var(--clr-yellow);
  text-align: center;
  padding: 5px;
  border-radius: 4px;
  font-weight: 700;
  font-size: 0.75rem;
}
.flex-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;

  border-radius: 12px;
  border: 1px solid black;

  background-color: var(--clr-white);

  /* margin on right side is 8 px larger than the left to account for 
  the box shadow which is 8 pixels offset to the right of the container. 
  This makes both sides have the same distance from the edge of the 
  screen */
  margin: 0px 18px 0px 10px;
  box-shadow: 8px 8px 0px 0px rgb(0, 0, 0);

  padding: 20px;
  max-width: 450px;
}
.text-published {
  color: black;
}
.text-info {
  color: var(--clr-gray-500);
}
.avatar {
  display: flex;
  place-items: center;
  gap: 1rem;

  img {
    width: 32px;
    height: 32px;
  }
}

h2:hover {
  color: var(--clr-yellow);
  cursor: pointer;
}

